--- a/jquery/card 3/style.css
+++ b/jquery/card 3/style.css
@@ -29,7 +29,7 @@ body {
 	margin-right:auto;
 }
 
-#main img:hover {
+.imghover {
 	-webkit-box-shadow: 0px 0px 25px 2px rgba(255,255,255,1);
 	-moz-box-shadow: 0px 0px 25px 2px rgba(255,255,255,1);
 	box-shadow: 0px 0px 25px 2px rgba(255,255,255,1);
