--- a/jquery/card 3/style.css
+++ b/jquery/card 3/style.css
@@ -78,6 +78,7 @@ body {
 }
 
 #startwrapper {
+	z-index:100;
 	margin:auto;
 	width:400px;
 }
@@ -88,6 +89,7 @@ body {
 }
 	
 button {
+	border:none;
 	font-size:16px;
 	line-height:40px;
 	border-radius:2px;
@@ -216,6 +218,7 @@ progress::-webkit-progress-bar {
 }
 
 #wrapper {
+	
 	background: none;
 	font-family: Androgyne;
 	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
@@ -224,11 +227,11 @@ progress::-webkit-progress-bar {
 	position: absolute;
 	top: 0;
 	width: 100%;
-	z-index:1;
 	-webkit-animation: snow 10s linear infinite;
 	-moz-animation: snow 10s linear infinite;
 	-ms-animation: snow 10s linear infinite;
 	animation: snow 10s linear infinite;
+	
 }
 @keyframes snow {
   0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
@@ -263,10 +266,16 @@ progress::-webkit-progress-bar {
 	left:0px;
 }
 
-
-
-
-
+#blackbackground {
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	background-color:black;
+	opacity:0.6;
+	z-index:10;
+}
 
 
 
